SubBt/force-app/main/default/objects/Checklist_Response__c/Checklist_Response__c.object-meta.xml
<CustomObject>
    <label>Checklist Response</label>
    <nameField>
        <displayFormat>CHR-{00000}</displayFormat>
        <label>Checklist Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>