SubBt/force-app/main/default/objects/Checklist_Response__c/fields/AccountChecklist__c.field-meta.xml
<CustomField>
    <fullName>AccountChecklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Checklist</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>AccountChecklist</relationshipName>
    <type>Lookup</type>
</CustomField>