SubBt/force-app/main/default/objects/Checklist_Response__c/fields/ContactChecklist__c.field-meta.xml
<CustomField>
    <fullName>ContactChecklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Checklist</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ContactChecklist</relationshipName>
    <type>Lookup</type>
</CustomField>