SubBt/force-app/main/default/objects/Checklist_Response__c/fields/ProjectChecklist__c.field-meta.xml
<CustomField>
    <fullName>ProjectChecklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Checklist</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipName>ProjectChecklist</relationshipName>
    <type>Lookup</type>
</CustomField>