SubBt/force-app/main/default/objects/Checklist_Response__c/fields/QuoteChecklist__c.field-meta.xml
<CustomField>
    <fullName>QuoteChecklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Checklist</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipName>QuoteChecklist</relationshipName>
    <type>Lookup</type>
</CustomField>