SubBt/force-app/main/default/objects/Checklist_Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccountChecklist__c</columns>
    <columns>Checklist_Name__c</columns>
    <columns>ContactChecklist__c</columns>
    <columns>Submitted_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>